platform/applications/openai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openai-proxy-service
  namespace: default
spec:
  selector:
    app: openai-proxy
  ports:
    - protocol: TCP
      port: 10000
      targetPort: http
  type: NodePort
